<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".loginActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/welcome_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/firstWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:paddingTop="7dp"
        android:text="@string/please_sign_up_and_create_blog_post_and_much_more"
        android:textColor="@color/black"
        android:textSize="16sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/Login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="38dp"
        android:autofillHints="Namw"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:hint="Email-Id"
        android:inputType="textEmailAddress"
        android:paddingVertical="10dp"
        android:paddingLeft="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/welcome_layout"
        app:layout_constraintStart_toStartOf="@+id/welcome_layout"
        app:layout_constraintTop_toBottomOf="@+id/welcome_layout" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="38dp"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:hint="PassWord"
        android:inputType="textPassword"
        android:paddingVertical="10dp"
        android:paddingLeft="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/Login_email"
        app:layout_constraintStart_toStartOf="@+id/Login_email"
        app:layout_constraintTop_toBottomOf="@+id/Login_email" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/or_login_with"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/password_login"
        app:layout_constraintTop_toBottomOf="@+id/password_login" />

    <LinearLayout
        android:id="@+id/linearLayout_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <ImageView
            android:id="@+id/google_pic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="3dp"
            android:contentDescription="@string/google"
            android:src="@drawable/facebook_logo2" />

        <ImageView
            android:id="@+id/facebook_pic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="3dp"
            android:src="@drawable/google_logo"
            android:contentDescription="@string/facebook"
            />


    </LinearLayout>
    <TextView
        android:id="@+id/f_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/forget_password"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_login" />
    <TextView
        android:id="@+id/signin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="4dp"
        android:text="@string/don_t_have_a_account_sign_up"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f_password" />
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="26dp"
        android:text="@string/login"
        android:background="@drawable/button_edit"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_text" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>