<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".signupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--        <com.facebook.login.widget.LoginButton-->
<!--            android:id="@+id/login_button"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:visibility="gone"-->
<!--            app:layout_constraintBottom_toTopOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/firstWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/h3"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:paddingTop="7dp"
                android:text="@string/please_sign_up_and_create_blog_post_and_much_more"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <!--        <ImageView-->
            <!--            android:id="@+id/welcome"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_gravity="clip_horizontal"-->
            <!--            android:layout_marginEnd="40dp"-->
            <!--            android:contentDescription="@string/welcome"-->

            <!--            android:src="@drawable/rectagle" />-->
        </LinearLayout>

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="38dp"
            android:background="@drawable/et_bg"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName"
            android:paddingVertical="10dp"
            android:paddingLeft="18dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

        <EditText
            android:id="@+id/Login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="38dp"
            android:autofillHints="Namw"
            android:background="@drawable/et_bg"
            android:ems="10"
            android:hint="Email-Id"
            android:inputType="textEmailAddress"
            android:paddingVertical="10dp"

            android:paddingLeft="18dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="38dp"
            android:background="@drawable/et_bg"
            android:ems="10"
            android:hint="PassWord"
            android:inputType="textPassword"
            android:paddingVertical="10dp"
            android:paddingLeft="18dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/Login_email"
            app:layout_constraintStart_toStartOf="@+id/Login_email"
            app:layout_constraintTop_toBottomOf="@+id/Login_email" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="38dp"
            android:background="@drawable/et_bg"
            android:ems="10"
            android:hint="Confirm PassWord"
            android:inputType="textPassword"
            android:paddingVertical="10dp"
            android:paddingLeft="18dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/password_login"
            app:layout_constraintStart_toStartOf="@+id/password_login"
            app:layout_constraintTop_toBottomOf="@+id/password_login" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/or_signup_using"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="40dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <ImageView
                android:id="@+id/google_pic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="3dp"
                android:contentDescription="@string/google"
                android:src="@drawable/facebook_logo2" />

            <ImageView
                android:id="@+id/facebook_pic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="3dp"
                android:contentDescription="@string/facebook"
                android:src="@drawable/google_logo" />


        </LinearLayout>

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:text="Already have a Account? Login."
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="26dp"
            android:background="@drawable/button_edit"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_text" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/login_btn"
            app:layout_constraintStart_toStartOf="@+id/login_btn"
            app:layout_constraintTop_toBottomOf="@+id/login_btn">

            <CheckBox
                android:id="@+id/term_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_signing_up_agree_to_our_terms_condition"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>