<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/bg"
    tools:context=".thirdActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView_31"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:text=" Acess any time"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textView_32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:gravity="center"
            android:paddingHorizontal="32dp"
            android:text="@string/h2"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/textView_31"
            app:layout_constraintStart_toStartOf="@+id/textView_31"
            app:layout_constraintTop_toBottomOf="@+id/textView_31" />

        <ImageView
            android:id="@+id/thirdone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:scaleType="center"
            android:layout_marginBottom="70dp"
            android:src="@drawable/third"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="@+id/textView_32"
            app:layout_constraintStart_toStartOf="@+id/textView_32"
            app:layout_constraintTop_toBottomOf="@+id/textView_32" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:orientation="vertical"
            android:paddingHorizontal="27dp"
            app:layout_constraintBottom_toTopOf="@+id/slide3"
            app:layout_constraintEnd_toEndOf="@+id/thirdone"
            android:layout_marginBottom="40dp"
            app:layout_constraintStart_toStartOf="@+id/thirdone">

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_edit"
                android:text="@string/lets_get_started"
                android:textColor="@color/white"
                tools:layout_editor_absoluteX="0dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView_35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingStart="30dp"
            android:paddingBottom="12dp"
            android:text="@string/skip"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            app:layout_constraintVertical_bias="0.768" />

        <TextView
            android:id="@+id/textView_36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingEnd="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="12dp"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            app:layout_constraintVertical_bias="0.768" />

        <ImageView
            android:id="@+id/slide3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:layout_marginBottom="12dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView_36"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toEndOf="@+id/textView_35"
            app:srcCompat="@android:drawable/alert_light_frame" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>